--- a/racconti/Giallo e Gialla.html
+++ b/racconti/Giallo e Gialla.html
@@ -14,7 +14,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XXXXXXXXXX');
+  gtag('config', 'G-N5K1P4YPJK');
 </script>
 </head>
 <body>
