--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"> <!-- Colleghiamo il CSS -->
  
-  <!-- Google Analytics -->
+   <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-N5K1P4YPJK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XXXXXXXXXX');
+  gtag('config', 'G-N5K1P4YPJK');
 </script>
 
 </head>
