--- a/Contatti.html
+++ b/Contatti.html
@@ -35,21 +35,12 @@
 
   <section id="contatti">
     <div class="contatti-container">
-        <h2>Contattami 📬</h2>
-        <p>Hai domande, suggerimenti o vuoi collaborare? Scrivimi! ✨</p>
-        <form action="submit_form.php" method="post">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required>
+      <p style="font-size: 60px;"><strong>ContatTami 📬</strong> </p>
+        <h2>Hai domande, suggerimenti o vuoi collaborare?  <br>
+          <br>Scrivimi! ✨</h2> <br>
+          <br>
+        <p style="font-size: 20px;"><strong>Email:</strong> <a href="mailto:scriviamo.info@gmail.com" style="font-size: 22px;">scriviamo.info@gmail.com</a></p>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="messaggio">Messaggio:</label>
-            <textarea id="messaggio" name="messaggio" rows="5" required></textarea>
-
-            <button type="submit">Invia</button>
-        </form>
-    </div>
 </section>
 
  <!-- Footer -->
